# pyagroplan

./: .gitignore  Data analysis.ipynb  LICENSE.md  README.md  beds_data.py  constraints.py  crop_calendar.py  crops_calendar.py  crops_data.py  environment.yml  general_program_structure.plantuml  interval_graph.py  main.py  model.py  mypy.ini  pyproject.toml  requirements.txt  solution.py
.github/workflows/: python-package.yml
data/: beds_data.csv  crop_calendar_1an_v7.csv  crop_calendar_1an_v8_v2.csv  crops_calendar_1an_v7.csv  crops_calendar_1an_v7_v0_0_2.csv  crops_calendar_1an_v8_v1.csv  crops_calendar_1an_v8_v2.csv  crops_interactions.csv  crops_metadata.csv
data/original_data/: besoinsreelsPetC_v7_1an.csv  besoinsreelsPetC_v8_1an_v1.csv  besoinsreelsPetC_v8_1an_v2.csv
docs/source/: conf.py  index.rst  modules.rst  pyagroplan.constraints.rst  pyagroplan.data.data_loaders.rst  pyagroplan.data.rst  pyagroplan.rst  pyagroplan.utils.rst
notebooks/: toy_example.ipynb
notebooks/data/: beds_data.csv  crop_types_attributes.csv  future_crop_calendar.csv  past_crop_plan.csv  return_delays.csv
src/: beds_data.py  constraints.py  constraints_parser.py  crop_calendar.py  crops_calendar.py  crops_data.py  exceptions.py  model.py  objective_functions.py  past_crop_plan.py  plotting.py  solution.py
src/utils/: utils.py  (+1 more)
tests/: test_agroecoplanmodel.py  test_beds_data.py  test_constraints.py  test_constraints_with_past_crop_plan.py  test_cp_constraints_pychoco.py  test_crop_calendar.py  test_crops_calendar.py  test_data_consistency_checks.py  test_past_crop_plan.py
(+37 files in other folders)
