[build-system]
requires = ["setuptools >= 70.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyagroplan"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "geopandas",
  "matplotlib",
  "networkx",
  "numpy",
  "pandas>=2.1.0",
  "pychoco==0.2.6",
  "rich[jupyter]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]